Update entry 19 to be more consistent with entry 8

--- a/index.html
+++ b/index.html
@@ -1362,7 +1362,13 @@ Tur-Myalvi: 82.3</p>
   </p>
 <h1 id="e19">From <em>Guide to Common Knowledge - Preface</em> </h1>
 <p>
-    <span>The Guide to Common Knowledge was compiled in 721 by Jezen Dekirzo, one of the major contributors to the idea of what we now call primary education in Liruzon, after he noticed that his child, Ravi Jezenzo, was consistently having to have basic aspects of the world and the surrounding societal workings explained to them. While this was expected for the given mindform (a literalist perceptually proficient branch), Jezen wanted a better solution to handle that case more effectively, and so he spent many years studying the kinds of things people end up having to teach their children, observing the world from the perspective of a child who is unfamiliar with its workings, and making use of comparisons to the radically different nearby culture of Myalvi, in order to compile the first edition of the Guide to Common Knowledge, which was the basis for the very first primary curriculum. It has been revised over the years as both our understanding of the world and our culture evolved, and the modern "Common Knowledge" course found in every primary school is ultimately based on the original Guide. </span>
+    <span>The concept of the Guide to Common Knowledge originated in 721 in a revelation to Jezen Dekirzo, one of the major contributors to the idea of what we now call primary education in Liruzon.
+        Jezen noticed that his child, Ravi Jezenzo, was consistently having to have basic aspects of the world and the surrounding societal workings explained to them. 
+        While this was expected for the given mindform (a literalist perceptually proficient branch), a better solution was warranted to handle that case more effectively, 
+        and so he spent many years studying the kinds of things people end up having to teach their children, observing the world from the perspective of a child who is 
+        unfamiliar with its workings, and making use of comparisons to the radically different nearby culture of Myalvi, in order to compile the first edition of the Guide to Common Knowledge,
+         which was the basis for the very first primary curriculum. It has been revised over the years as both our understanding of the world and our culture evolved, and the modern 
+         "Common Knowledge" course found in every primary school is ultimately based on the original Guide. </span>
   </p>
 </div>
 </div>
