--- a/index.html
+++ b/index.html
@@ -873,6 +873,7 @@
 <p class="patchnotes"><br><a href="#e17">Entry 17: From <em>Common Knowledge Curriculum - Year 4</em></a></p>
 <p class="patchnotes"><br><a href="#e18">Entry 18: From <em>Yarzon-Watershed</em></a></p><p></p>
 <p class="patchnotes"><br><a href="#e19">Entry 19: From <em>Guide to Common Knowledge - Preface</em></a></p> 
+<p class="patchnotes"><br><a href="#e20">Entry 20: From <em>The Fort Karzen Files</em></a></p> 
 <hr>
 <h3 class="patchnotes" id="vg">Vector's Socials</h3>
 <p class="patchnotes"><br><a href="https://www.youtube.com/@VectorJW9260">Vector's Youtube Channel</a></p> 
@@ -988,6 +989,9 @@ Home became the center of the yaref population, and although the other settlemen
             <p>
               <span>It has been known since the beginning of Ana-hin's formal ambassadorship in 256X that the name Khara took while in the Underground was "Magzi"; this is because of the body-sharing of Ana-hin and Khara allowing the latter to interact in the world directly; the power by which this body-sharing was able to occur is unknown.</span>
             </p>
+
+            <p><strong>From "Myalvi":</strong></p>
+            <p><span>Tur-Myalvi is a nation of Wilant located south of Rahazun and north of Hesan proper. Tur-Myalvi was founded when the wilo came across the sea from Endadvi, establishing their rule over what was once the northern realm of Hesan (ruled by Niki). They failed to understand the Panavana as a people, failing to recognize the natural place of different kinds of people in Hesanic society, while the Panavic people were... [...] ...and as a result, after the original colonial program failed, in a crude attempt to integrate with existing cultures, the nation of Tur-Myalvi adopted the Esteri deity <em>Errai</em> as a national symbol (while still of course continuing to worship Hierrau, their own god), not realizing that Errai in Esteri mythology was a demon of boredom and confusion, associated with Myalvi by the ezov to mock Wilant.</span></p>
 
             <h1 id="e7">From <em>Common Knowledge Curriculum - Year 2</em> </h1>
             <p>
@@ -1369,6 +1373,12 @@ Tur-Myalvi: 82.3</p>
         unfamiliar with its workings, and making use of comparisons to the radically different nearby culture of Myalvi, in order to compile the first edition of the Guide to Common Knowledge,
          which was the basis for the very first primary curriculum. It has been revised over the years as both our understanding of the world and our culture evolved, and the modern 
          "Common Knowledge" course found in every primary school is ultimately based on the original Guide. </span>
+  </p>
+
+
+  <h1 id="e20">From <em>The Fort Karzen Files</em> </h1>
+  <p>
+    <span>Those already living in the lands of Myalvi do not have a firm grasp on reality as it is, often deriving knowledge from their fictions rather than from the truth. This is because their form of "consciousness" is fundamentally flawed; they think of themselves as, if they don't actually be, inherently non-conscious, receiving inspiration only from higher sources. This is reflected in how they often (seemingly irrationally) place people with debilitating mental disorders in prestigious positions. They additionally regularly violate the sanctity of sexual relations; their marriage customs are not fully understood and seem to deviate from romantic love in many situations; this implies a broken form of morality, one which does not respect any traditional form of formality whatsoever. They additionally lack any sort of reasonable structure to their leadership, answering to local lords who then answer to their greater leaders. The natives of Myalvi are a harsh, warlike people, who refuse to follow the faith of Hierrau; we have encountered resistance from native armies on all fronts during colonization, though we have managed to hold onto our fortifications near the Sevevda River (namely, Fort Sevevda itself along with Fort Karzen and Fort Ruerden). </span>
   </p>
 </div>
 </div>
