--- a/index.html
+++ b/index.html
@@ -875,12 +875,15 @@
 <p class="patchnotes"><br><a href="#e19">Entry 19: From <em>Guide to Common Knowledge - Preface</em></a></p> 
 <p class="patchnotes"><br><a href="#e20">Entry 20: From <em>The Fort Karzen Files</em></a></p> 
 <hr>
+<p class="patchnotes"><br><a href="visualmedia.html"><em>View visual media related to Undersided</em></a></p> 
+<p class="patchnotes"><br><a href="ost.html"><em>View songs related to Undersided</em></a></p> 
+<hr>
 <h3 class="patchnotes" id="vg">Vector's Socials</h3>
 <p class="patchnotes"><br><a href="https://www.youtube.com/@VectorJW9260">Vector's Youtube Channel</a></p> 
 <p class="patchnotes"><br><a href="https://discord.gg/YAeTuenxqA">Vector's Discord Server</a></p> 
 <hr>
 <h3 class="patchnotes">Disclaimer</h3>
-<hr> <p class="patchnotes">This project utilizes AI-generated media for visuals (as of June 15th 2025, this is only the backgrounds, though additional media may be incorporated into the documentations at a later date), and I have been asked to justify this by many individuals I have brought it up to. As such, a justification has been provided: I do this because I do not care about "artistic value" in the conventional sense; the current backgrounds are simply meant to be visually appealing, and any future media is simply meant to depict an aspect of the setting. Neither are, strictly speaking, "art" (in the pedantic sense that many people on the Internet use); this is true of all visual media I publish. The core creative content of the Undersided website is found entirely within the setting it depicts - Yona - and not within any depiction thereof (including the Undersided documentation itself, which was written by Vector); complaints about the usage of AI refuse to recognize this fact, and will be ignored. The contents of this site, along with Yona itself (rightfully excluding the intellectual property of anyone else (such as Toby Fox) whose work I may utilize in the construction of Yona or Undersided) are dedicated to the public domain.</p>
+<hr> <p class="patchnotes">This project utilizes AI-generated media for visuals, and I have been asked to justify this by many individuals I have brought it up to. As such, a justification has been provided: I do this because I do not care about "artistic value" in the conventional sense; the current backgrounds are simply meant to be visually appealing, and any future media is simply meant to depict an aspect of the setting. Neither are, strictly speaking, "art" (in the pedantic sense that many people on the Internet use); this is true of all visual media I publish. The core creative content of the Undersided website is found entirely within the setting it depicts - Yona - and not within any depiction thereof (including the Undersided documentation itself, which was written by Vector); complaints about the usage of AI refuse to recognize this fact, and will be ignored. The contents of this site, along with Yona itself (rightfully excluding the intellectual property of anyone else (such as Toby Fox) whose work I may utilize in the construction of Yona or Undersided) are dedicated to the public domain. Additionally, AI generation is used for some audio, but only when I have originally provided a ~60 second sample of source audio that I composed myself.</p>
 
 <br> <br> <br> <br>
     </div> 
