--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Webpage description goes here" />
+  <meta name="description" content="Vector's expansion of the setting of Undertale by Toby Fox" />
   <meta charset="utf-8">
   <title>Undersided</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -223,6 +223,7 @@
           h3 {
               font-family: var(--font);
               font-weight:bold;
+              text-align: center;
               font-size: 2em;
               color: var(--textcolorb);
           }
@@ -876,6 +877,8 @@
 <p class="patchnotes"><br><a href="#e20">Entry 20: From <em>The Fort Karzen Files</em></a></p> 
 <p class="patchnotes"><br><a href="#e21">Entry 21: From <em>The Rahazuna Political System</em></a></p> 
 <p class="patchnotes"><br><a href="#e22">Entry 22: From <em>University of Monselian</em></a></p> 
+<p class="patchnotes"><br><a href="#e23">Entry 23: From <em>The Book of Kings</em></a></p> 
+<p class="patchnotes"><br><a href="#e24">Entry 24: From <em>The Kinds of Human</em></a></p> 
 <hr>
 <p class="patchnotes"><br><a href="visualmedia.html"><em>View visual media related to Undersided</em></a></p> 
 <p class="patchnotes"><br><a href="ost.html"><em>View songs related to Undersided</em></a></p> 
@@ -929,7 +932,7 @@
       <h1 id="e2">From <em>Emperors of Rahazun</em> </h1>
       <h3 class="patchnotes"><em>947, Rahazun</em> </h1>
     <p>
-        <span>Emperor Karol-Kalvi Foster VII was the first emperor of Rahazun after the overthrow of Siegetev Seransai following the war. Most of Karol-Kalvi's reign was spent cleaning up the mess that Siegetev left, but a lot of the history of Yarzon of the Great Watershed got swept up in this. It's not particularly like the following rulers were much better; Lekusa-Kalvi-hin basically did nothing as a ruler, and the issue of Yarzon was far in the past for the following rulers, who wanted to rid themselves of the issue. History recalls one particular instance where a statue of Tomi-Rugan located in Yarhe, originally made in 647 to commemorate Tomi-Rugan and symbolize unity between humans and yarov, was discarded in a pit at Mt. Ebott in 724 during the reign of Ana-Kalvi Foster. One of the people involved in the disposal of the statue, Maniri Lahok, ended up trapped in a chasm in Mt. Ebott due to the barrier; this was a sky-exposed passage largely separated from the main Underground cavern. Maniri died shortly after, and the SOUL was never recovered.</span>
+        <span>Emperor Karol-Kalvi Foster was the first emperor of Rahazun after the overthrow of Siegetev Seransai following the war. Most of Karol-Kalvi's reign was spent cleaning up the mess that Siegetev left, but a lot of the history of Yarzon of the Great Watershed got swept up in this. It's not particularly like the following rulers were much better; Lekusa-Kalvi-hin basically did nothing as a ruler, and the issue of Yarzon was far in the past for the following rulers, who wanted to rid themselves of the issue. History recalls one particular instance where a statue of Tomi-Rugan located in Yarhe, originally made in 647 to commemorate Tomi-Rugan and symbolize unity between humans and yarov, was discarded in a pit at Mt. Ebott in 724 during the reign of Ana-Kalvi Foster. One of the people involved in the disposal of the statue, Maniri Lahok, ended up trapped in a chasm in Mt. Ebott due to the barrier; this was a sky-exposed passage largely separated from the main Underground cavern. Maniri died shortly after, and the SOUL was never recovered.</span>
       </p>
       <h1 id="e3">From <em>History of Yarvant</em> </h1>
       <h3 class="patchnotes"><em>915, Yarzon-Ebott</em> </h1>
@@ -1449,14 +1452,135 @@ Tur-Myalvi: 82.3</p>
 <p>
   <span>The Historian themself is generally taken to be an immortal servant of Ramazir, as the Historian as an identity is still existent today. Physical appearances of the Historian have been extremely rare. However, many books have been published by the University in the Historian's name. In the baseline interpretation, the Historian is a persona maintained by the University, similar to the various appearances of Arvent during the winter holidays for their respective communities.</span>
 </p>
+
+
+<h1 id="e23">From <em>The Book Of Kings</em> </h1>
+<h3 class="patchnotes"><em>915, Montera</em> </h1>
+
+<p>...Only surnames which represent notable families will be shown, except for Ezva or Wilka realms that follow a strictly hereditary system.</p><h3>Table of Contents</h3><h3>Volume I: Yarzon (High King)</h3>
+
+<p>The Ancient Rulers:</p>
+
+<p>From the establishment of the High Kingdom by the Vanki to the fall of Hesan, the historical sister kingdom to Yarzon.</p>
+
+<p>Tonoi-Damat (1374-870 BR; full lifespan)<br />
+Aratikent (870-724 BR)<br />
+Etevni-Aratikent (724-551 BR)<br />
+Porakate (551-314 BR)</p>
+
+<p>The Post-Hesanic Rulers:</p>
+
+<p>Kalagara (314-196 BR)<br />
+Olijan (196-141 BR)<br />
+Durama (141-113 BR)<br />
+Zoto (113 BR-3 SR)</p>
+
+<p>The Dan-Ruerden Rulers:</p>
+
+<p>Adur (3-92 SR)<br />
+Vodi Zbedzdern (92-155 SR)<br />
+Kendi (155-204 SR)<br />
+Ahi (204-292 SR)<br />
+Ogoni (292-343 SR)<br />
+Gasai-Vi (343-382 SR)<br />
+Balatar Zbedzdern (382-446 SR)</p>
+
+<p>The Middle Rulers:</p>
+
+<p>Tatsel (446-494 SR)<br />
+Sonne (494-525 SR)<br />
+Sureiba Govden (525-562 SR)<br />
+Nivuna Govden (562-593)<br />
+Alu (593-621)<br />
+Gajn Govden (621-660)<br />
+Rotas (660-661)</p>
+
+<p>The Banished Rulers:</p>
+
+<p>Gajn Govden (660-699)<br />
+Dulu Govden (699-734)<br />
+Rosi (734-757)<br />
+Lakhni (757-782)<br />
+Armand (782-869)</p>
+
+<p>The Golden Rulers:</p>
+
+<p>Yarkeji (869-present)</p><h3>Volume 1.5: Yarzon (Ebott)</h3>
+
+<p>Ruaeli Brujgal (662-913)</p><h3>Volume II: Rahazun</h3>
+
+<p>The Ezva Era:</p>
+
+<p>Sarafi Ranzali (1-18 SR)*<br />
+Khara Ranzali (18-35 SR)<br />
+Rizman Ranzali (35-56 SR)<br />
+Toli Ranzali (56-76 SR)<br />
+Halme Ranzali (76-83 SR)<br />
+Suzi Ranzali (83-101 SR)<br />
+Volat Himeiro (101-125 SR)<br />
+Volat II Himeiro (125-134 SR)<br />
+Ahadir Himeiro (134-156 SR)<br />
+Muman Himeiro (156-173 SR)</p>
+
+<p>*Traditionally listed with the Hesanic name. Korhisian name is Lumien. </p>
+
+<p>The Nideri Era:</p>
+
+<p>Count Irafin Seransai (173-205 SR)<br />
+Count Igzimre (205-239 SR)<br />
+Count Ifbozna (239-274 SR)<br />
+Count Vomunt (274-306 SR)<br />
+Count Ilvosiu (306-338 SR)<br />
+Count Lolubinsi (338-373 SR)<br />
+Count Imbongus (373-401 SR)<br />
+Count Snalbi (401-435 SR)<br />
+Count Dekoven (435-464 SR)<br />
+Count Kradunofle (464-498 SR)<br />
+Count Uri (498-532 SR)<br />
+Count Gilin Seransai (532-572 SR)</p>
+
+<p>The Independence Era:</p>
+
+<p>Minrafi Seransai (572-604 SR)<br />
+Ojgr (604-635 SR)<br />
+Kuin (635-648 SR)<br />
+Siegetev (648-663 SR)</p>
+
+<p>The Empire Era:</p>
+
+<p>Karol-Kalvi (663-694 SR)<br />
+Lekusa-Kalvi (694-723 SR)<br />
+Ana-Kalvi (723-756 SR)<br />
+Salfo (756-792 SR)<br />
+Ngaza (792-824 SR)<br />
+Zorvan (824-848 SR)<br />
+Himir (848-876 SR)<br />
+Rodan (876-904 SR)<br />
+Sarnelkh Seransai (904 SR-present)</p>
+<h1 id="e24">From <em>The Kinds of Human</em> </h1>
+<h3 class="patchnotes"><em>892, Yarzon-il-Dividar</em> </h1>
+<p>Unlike yarov which may have dozens of kinds within the same settlement, and hundreds more elsewhere, humans only have a handful of different regional varieties, often with distinct cultures. Cultural differences between these ethnicities' respective cultures will be covered separately; for now, we will focus on the physical distinctions between them. Consult the introduction to this book for a primer on human physiology.</p>
+
+<p>Vedil, the most commonly found in Liruzon, are among the taller varieties of humans, about 7 feet tall on average with a wide, heavy body type and a distinctive yellow skin tone. They are also notable for their late onset of puberty (from about 18 to 25 years old) relative to their lifespan of about 80 years.</p>
+
+<p>Razil are another common human variety native to the caverns beneath Liruzon. They belong to a family of related cave-dwelling human populations that share the characteristics of pale skin tones, very short and scrawny body types, and hunched postures, including the Yahiraban native to the caverns underneath the Vana, and the Tadeleti living in Ezvelan.</p>
+
+<p>Donno are the original natives to Liruzon, as the Vanki population which has been forced further east by Panavic expansion. Physically, Donno are of medium height and body type, with feline ears and tail. Notably, they mature extremely quickly for their lifespan of about 73 years.</p>
+
+<p>Ezov call the snowy lands of Ezvelan home, and are well-adapted to it, with thick fur and dark skin that serve to trap and absorb heat. They are somewhat shorter than donno, but not as short as razil. They have unusually short lifespans, only up to about 50 years, and as such mature rather quickly.</p>
+
+<p>Wilo, a variety native to Indadvi but now also found in Tur-Myalvi and rarely elsewhere in Liruzon, are of medium height, with skin ranging from tan to pale beige, and a medium body type, however they customarily hide their appearances with cloaks. Their lifespans are on the longer side, similarly to vedil. </p>
+
+<p>Pavriz are an example of a kind of human living in the far east of Iltezon, in the lands of Havon and also to the south in Inveri. They are very tall (8-9 feet) with a generally skinny body type, and with skin ranging from light red to light purple and dark eyes. They live up to 100 years, but are only fully grown by about age 35.</p>
+
+<p>Malakiz live across Iltezon as a diaspora, in various small settlements within other cities, in traveling bands, etc. Physically, they resemble wila children (in fact, puberty/adolescence doesn't affect their external appearance at all), with reddish skin tones, and they live for about 90 years on average.</p>
+
+
+
+
+<!--STOP WRITING AT THIS POINT-->
 </div>
-
-
-
-
-
 </div>
-
 <script>
 </script>
 
