--- a/ost.html
+++ b/ost.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Webpage description goes here" />
+  <meta name="description" content="Several songs for Undersided" />
   <meta charset="utf-8">
   <title>Undersided</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1113,6 +1113,16 @@
     <p>The very first song I made for what would eventually become Undersided.</p>
     <h3>Leitmotifs:</h3>
     <p> - </p>
+
+</div>
+
+<div class="infocontainer">
+    <h1>The Historian</h1>
+    <p><audio controls src="Historian.mp3"></audio></p>
+    <p>The theme of the Historian and the Creators' District, relating to the University of Monselian.</p>
+    <h3>Leitmotifs:</h3>
+    <p>Rahazun</p>
+    <p>Ylir</p>
 
 </div>
 
