--- a/visualmedia.html
+++ b/visualmedia.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Webpage description goes here" />
+  <meta name="description" content="A gallery of illustrations, concepts, etc for Undersided" />
   <meta charset="utf-8">
   <title>Undersided</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1062,7 +1062,7 @@ div.desc {
         <a target="_blank" href="img019.png">
           <img src="img019.png" alt="Mountains"  height="400">
         </a>
-        <div class="desc"><p>Yaref resembling Dulu Covedon</p></div>
+        <div class="desc"><p>Yaref resembling Dulu</p></div>
       </div>
 
             <div class="gallery">
@@ -1104,7 +1104,7 @@ div.desc {
         <a target="_blank" href="img025.png">
           <img src="img025.png" alt="Mountains"  height="400">
         </a>
-        <div class="desc"><p>Family of Lord Kain, ruler of Yarzon-Watershed prior to the war</p></div>
+        <div class="desc"><p>Family of Lord Gajn, ruler of Yarzon-Watershed prior to the war (NOTE: names shown in image are outdated)</p></div>
       </div>
 
             <div class="gallery">
@@ -1172,6 +1172,42 @@ div.desc {
           <img src="img036.png" alt="Mountains"  height="400">
         </a>
         <div class="desc"><p>Iradanet (Character) [Computer&nbsp;generated]</p></div>
+      </div>
+                              <div class="gallery">
+        <a target="_blank" href="img037.png">
+          <img src="img037.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>An additional set of human races from more distant lands</p></div>
+      </div>
+                              <div class="gallery">
+        <a target="_blank" href="img038.png">
+          <img src="img038.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>Koganda (Race) [Computer&nbsp;generated]</p></div>
+      </div>
+                              <div class="gallery">
+        <a target="_blank" href="img039.png">
+          <img src="img039.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>Grebo (Race) [Computer&nbsp;generated]</p></div>
+      </div>
+                              <div class="gallery">
+        <a target="_blank" href="img040.png">
+          <img src="img040.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>A map of the northern lands</p></div>
+      </div>
+                                    <div class="gallery">
+        <a target="_blank" href="img041.png">
+          <img src="img041.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>A map of the southwestern lands</p></div>
+      </div>
+                                    <div class="gallery">
+        <a target="_blank" href="img042.png">
+          <img src="img042.png" alt="Mountains"  height="400">
+        </a>
+        <div class="desc"><p>A map of the south of Liruzon in 647</p></div>
       </div>
 
 
