added sections, added 2 new entries, fixed font bug

--- a/visualmedia.html
+++ b/visualmedia.html
@@ -36,8 +36,8 @@
               --innershadowcolorb: #4477ff79;
               --borderradiusdf: 25px;
               --whiteiconfilter: none;
-              --font: Metrophobic, sans-serif;
-              --hfont: Metrophobic, sans-serif;
+              --font: Noto Serif, serif;
+              --hfont: Noto Serif, serif;
               /**--textcolor: rgb(255,255,255);
               --textcolorb: rgb(255,255,255);    
               --bgcolor: rgb(16,16,16);
