--- a/index.html
+++ b/index.html
@@ -949,6 +949,9 @@
   </p>
       <h1 id="e3">From <em>History of Yarvant</em> </h1>
       <h3 class="patchnotes"><em>915, Yarzon-Ebott</em> </h1>
+        <h4>From "Conventions"</h4>
+        <p>The "X" dating system relates to the standard SR dating system by 663 SR = 1 X (the year following the banishment of the yarov of Liruzon), so that, for example, 201 X is the same year as 863 SR.</p>
+        <p>(skipped sections)</p>
         <h4>The aftermath of the war</h4> 
     <p>When we first were trapped in the Underground, we attempted to settle in the most apparently habitable places, among them Upper Waterfall near the surface, the Meadow, and the Snowdin Forest.</p>
 
@@ -1668,6 +1671,74 @@ Sarnelkh Seransai (904 SR-present)</p>
 <p>
   <span>Bennitri was born in 636 in Ebtaraz, a village of razil located underneath Mt. Ebott which would become a ghost town over the next 25 years due to lack of contact with the rest of Raz (the last inhabitant dying in 661). Bennitri left in 646, finding Tomi and thus the Brujgals a year later, similar to Khara later on. Bennitri's time associated with the family overlapped with Tomi-Rugan's time as de-facto King of Yarzon-Watershed, making Bennitri a prince. Bennitri was an influential figure during the Invasion of Yarzon-Watershed, having had a role in the events leading up to the war, first attempting to meet with Siegetev himself on behalf of Tomi-Rugan (inadvertently massively heightening tensions). However, once the Great Evacuation was caught and halted by Siegetev in 663 as it was nearing its completion, the Brujgal family belonged to the 1% of Yarzon-Watershed's population left behind (as a large portion of the other remnants were wiped out), and Bennitri was himself able to meet with Chief Engineer Altria, and convince her to design and create a barrier to contain the monsters of Liruzon, as opposed to Siegetev's original plan of wiping out Liruzon's monster population entirely and then going after Ezvelan. This barrier did ultimately end up being created (around Mt. Ebott, containing the monsters in the former site of Ebtaraz), but Bennitri chose to stay on the surface, wishing to leave Ebtaraz behind. Bennitri lived out his later years (722-749) isolated from civilization on the slopes of Mt. Ebott, and eventually died there in 749. </span>
 </p>
+
+<h1 id="e27">From <em>The Colonies of Myalvi</em></h1>
+<h3>
+  <em>
+    <span>246 BF, Tur Myalvi</span>
+  </em>
+</h3><h3>
+  <span>The Ruerden Colony: A description of the explored lands so far</span>
+</h3>
+
+<p>
+  <span>We arrive at Fort Sevevda; to the north along Ruerden Beach lies Fort Ruerden. Further inland are the hills of Echavi, down from which flows the Rivers Sevevda in the south (leading to Fort Sevevda) and Vavyer to the north. North is the long coastal region leading to Ilbanez and the lands of the Krizhan people, who have a short stature and furred bodies like those of the north. Continuing northward and deep into the lands of the Krizhan we have our own abandoned Fort Monzeyan, from which, while it had not been lost to brutal attacks by natives, we set out to explore the north, starting with the peninsulae of Montar and Valbar. The native warriors seem to fight in a trance-like 'rage state'. </span>
+</p>
+
+<p>
+  <span>Then, crossing the Ratavnos Bay, we reach Ratavnos proper, the snowy homeland of those first encountered in Ilbanez. The northern boundary of the Ruerden grant is the 64.5th parallel and its southern boundary is the location of Fort Sevevda at around 47.5 degrees north, which forms its own colonial region, encompassing the lands which yarov currently inhabit in both southern and northern Myalvi, which are among the largest concentrated populations of yarov known to Wilant.</span>
+</p><h3>
+  <span>The Karzen Colony: A description of the explored area of Myalvi</span>
+</h3>
+
+<p>
+  <span>The region stretches south from Fort Sevevda, starting with Fort Karzen on the Karzen Beach. We approach the homeland of the yellow folk who resist our colonization, starting with what appears to be their northernmost realm, along the Sejodon Peninsula to the coast to the east. Across the bay lies Panavis, their homeland and where the Karzen grant's southern boundary is at 34 degrees north, and which sits just beyond the Dalrad Mountains that define the eastern edge of our familiar realm. The Karzen region, just like Ruerden to the north, stretches to the eastern coast of the continent, though it is unlikely given recent circumstances that this will be seen through to its proper conclusion. </span>
+</p>
+
+<h1 id="e28">From an informal commentary on <em>The Colonies of Myalvi</em></h1>
+<h3>
+  <em>
+    <span>878 SR, Niki Myalvi</span>
+  </em>
+</h3>
+<p>
+  <span>Dreda: "Interestingly, they seem to have used 'Myalvi' to refer to Liruzon and Ezvelan as a whole, and apparently the rest of the continent?."</span>
+</p>
+
+<p>
+  <span>Arsamitev: "Yeah, they were rather greedy back then. To be honest, they kinda still are. They don't get the fundamentals of how rulership works."</span>
+</p>
+
+<p>
+  <span>Dreda: "Also, look at these names they're using. Montar? Valbar? It's Montera! And Valvar! And it's the Alz peninsula, Valvar isn't even on it!".</span>
+</p>
+
+<p>
+  <span>Arsamitev: "I'm telling you, it's Halz!"</span>
+</p>
+
+<p>
+  <span>Dreda: "I can't make that sound! Uh, Ralz? I don't know."</span>
+</p>
+
+<p>
+  <span>Dreda: "Also, 'Sevevda' for the river Arelbanz? That's just ancient Hesanic for 'What the fuck are you saying?'!"</span>
+</p>
+
+<p>
+  <span>Arsamitev: "I mean, makes sense. Some Hesanic person saw a wila waltz up to them and ask them something in a language they couldn't understand."</span>
+</p>
+
+<p>
+  <span>Dreda: "So let's see. At least they got Panavis right. Sejodon is actually Gazivoj, and Ratavnos is Ezvelan (with the Ratavnos Bay being the Gulf of Montera)."</span>
+  <span><br />
+</span>
+  <span><br />
+</span>
+  <span>Arsamitev: "Haha, 'the Krizhan people'. Korhision was an empire."</span>
+</p>
+
+
 
 
 <!--STOP WRITING AT THIS POINT-->
